force-app/main/default/objects/ServiceAppointment/fields/ALK_Canceled_Appointment_Date__c.field-meta.xml
<CustomField>
    <fullName>ALK_Canceled_Appointment_Date__c</fullName>
    <label>Fechas de Cita Cancelada</label>
    <length>20</length>
    <type>Text</type>
</CustomField>