force-app/main/default/objects/ServiceAppointment/fields/ALK_Communication_Information__c.field-meta.xml
<CustomField>
    <fullName>ALK_Communication_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Información de Comunicación</label>
    <type>Checkbox</type>
</CustomField>