force-app/main/default/objects/ServiceAppointment/fields/ALK_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>ALK_Customer_Name__c</fullName>
    <formula>If( Account.IsPersonAccount=true, Account.FirstName + &quot; &quot; +  Account.LastName, Account.Name)</formula>
    <label>Nombre del Cliente</label>
    <type>Text</type>
</CustomField>