force-app/main/default/objects/ServiceAppointment/fields/ALK_Delete_Entity_Subscription__c.field-meta.xml
<CustomField>
    <fullName>ALK_Delete_Entity_Subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delete Entity Subscription</label>
    <type>Checkbox</type>
</CustomField>