force-app/main/default/objects/ServiceAppointment/fields/ALK_Email_Incomplete_Reason__c.field-meta.xml
<CustomField>
    <fullName>ALK_Email_Incomplete_Reason__c</fullName>
    <formula>IF ( ISPICKVAL( ALK_Motivo_Incompletud__c , &quot;Otros&quot; ), ALK_Motivo_Incompletud_otros__c  ,  TEXT ( ALK_Motivo_Incompletud__c ))</formula>
    <label>Motivo de Incompletitud Email</label>
    <type>Text</type>
</CustomField>