force-app/main/default/objects/ServiceAppointment/fields/ALK_End_Date__c.field-meta.xml
<CustomField>
    <fullName>ALK_End_Date__c</fullName>
    <formula>DATEVALUE( ArrivalWindowEndTime )</formula>
    <label>Fecha de Finalización</label>
    <type>Date</type>
</CustomField>