force-app/main/default/objects/ServiceAppointment/fields/ALK_Entity_Subscription_Reference_Date__c.field-meta.xml
<CustomField>
    <fullName>ALK_Entity_Subscription_Reference_Date__c</fullName>
    <label>Entity Subscription Reference Date</label>
    <type>DateTime</type>
</CustomField>