force-app/main/default/objects/ServiceAppointment/fields/ALK_Facturing_Number__c.field-meta.xml
<CustomField>
    <fullName>ALK_Facturing_Number__c</fullName>
    <formula>ALK_Work_Order__r.ALK_Numero_Factura__c</formula>
    <label>Número de la Factura</label>
    <type>Text</type>
</CustomField>