force-app/main/default/objects/ServiceAppointment/fields/ALK_General_Recommendations__c.field-meta.xml
<CustomField>
    <fullName>ALK_General_Recommendations__c</fullName>
    <label>Recomendaciones Generales</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>