force-app/main/default/objects/ServiceAppointment/fields/ALK_Motivo_Incompletud__c.field-meta.xml
<CustomField>
    <fullName>ALK_Motivo_Incompletud__c</fullName>
    <label>Motivo de Incompletitud</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Falla de producto</fullName>
            </value>
            <value>
                <fullName>Daño estético</fullName>
            </value>
            <value>
                <fullName>Solicitud Cliente</fullName>
            </value>
            <value>
                <fullName>Producto incompleto</fullName>
            </value>
            <value>
                <fullName>Adecuaciones</fullName>
            </value>
            <value>
                <fullName>Incumpolimiento de Horario</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>