force-app/main/default/objects/ServiceAppointment/fields/ALK_Motivo_Incompletud_otros__c.field-meta.xml
<CustomField>
    <fullName>ALK_Motivo_Incompletud_otros__c</fullName>
    <label>Motivo de incompletud (otros)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>