force-app/main/default/objects/ServiceAppointment/fields/ALK_Notificaction_Status__c.field-meta.xml
<CustomField>
    <fullName>ALK_Notificaction_Status__c</fullName>
    <label>Estado de Notificación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ninguno</fullName>
            </value>
            <value>
                <fullName>Notificación Enviada</fullName>
            </value>
            <value>
                <fullName>Envío de notificación fallido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>