force-app/main/default/objects/ServiceAppointment/fields/ALK_Previous_Service_Resource_UserId__c.field-meta.xml
<CustomField>
    <fullName>ALK_Previous_Service_Resource_UserId__c</fullName>
    <label>Previous Service Resource User Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>