force-app/main/default/objects/ServiceAppointment/fields/ALK_Process_Notification__c.field-meta.xml
<CustomField>
    <fullName>ALK_Process_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to make the record available to be processed by Notification Batch to send status changed notification to customer.</description>
    <label>Process Notification</label>
    <type>Checkbox</type>
</CustomField>