force-app/main/default/objects/ServiceAppointment/fields/ALK_Related_Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>ALK_Related_Service_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cita de servicio relacionada</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Citas de servicios (Cita de servicio Principal)</relationshipLabel>
    <relationshipName>Citas_de_servicios</relationshipName>
    <type>Lookup</type>
</CustomField>