force-app/main/default/objects/ServiceAppointment/fields/ALK_Removed_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>ALK_Removed_Scheduled__c</fullName>
    <formula>IF (ISPICKVAL(Status, &quot;No Asignada&quot;) &amp;&amp;  NOT(ISNULL(ArrivalWindowStartTime)), TRUE, FALSE)</formula>
    <label>Removed Scheduled</label>
    <type>Checkbox</type>
</CustomField>