force-app/main/default/objects/ServiceAppointment/fields/ALK_Resource_Names__c.field-meta.xml
<CustomField>
    <fullName>ALK_Resource_Names__c</fullName>
    <formula>IF ( NOT( ISBLANK ( ALK_Related_Service_Appointment__c )),  ALK_Service_Resource__r.Name + &quot; y &quot; +  ALK_Related_Service_Appointment__r.ALK_Service_Resource__r.Name,  ALK_Service_Resource__r.Name  )</formula>
    <label>Nombres de Recursos de Servicio</label>
    <type>Text</type>
</CustomField>