force-app/main/default/objects/ServiceAppointment/fields/ALK_Selling_Store__c.field-meta.xml
<CustomField>
    <fullName>ALK_Selling_Store__c</fullName>
    <formula>ALK_Work_Order__r.ALK_Tienda_Compra__c</formula>
    <label>Tienda de Compra</label>
    <type>Text</type>
</CustomField>