force-app/main/default/objects/ServiceAppointment/fields/ALK_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>ALK_Service_Date__c</fullName>
    <formula>IF ( NOT(ISNULL (ArrivalWindowStartTime)), DATEVALUE(  ArrivalWindowStartTime ), DATEVALUE ( SchedStartTime ))</formula>
    <label>Fecha de la Cita</label>
    <type>Date</type>
</CustomField>