force-app/main/default/objects/ServiceAppointment/fields/ALK_Service_Recommendations__c.field-meta.xml
<CustomField>
    <fullName>ALK_Service_Recommendations__c</fullName>
    <formula>&quot;Text&quot;</formula>
    <label>Recomendaciones del Servicio</label>
    <type>Text</type>
</CustomField>