force-app/main/default/objects/ServiceAppointment/fields/ALK_Service_Resource__c.field-meta.xml
<CustomField>
    <fullName>ALK_Service_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recurso de servicio</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Citas de servicios</relationshipLabel>
    <relationshipName>Citas_de_servicios_1</relationshipName>
    <type>Lookup</type>
</CustomField>