force-app/main/default/objects/ServiceAppointment/fields/ALK_Time_Window_Canceled__c.field-meta.xml
<CustomField>
    <fullName>ALK_Time_Window_Canceled__c</fullName>
    <label>Rango de Horas Cita Cancelada</label>
    <length>100</length>
    <type>Text</type>
</CustomField>