force-app/main/default/objects/ServiceAppointment/fields/ALK_Trabajo_Complejo__c.field-meta.xml
<CustomField>
    <fullName>ALK_Trabajo_Complejo__c</fullName>
    <formula>WorkType.ALK_Complex_Work__c</formula>
    <label>Trabajo Complejo</label>
    <type>Checkbox</type>
</CustomField>