force-app/main/default/objects/ServiceAppointment/fields/ALK_Update_Status_Mobile__c.field-meta.xml
<CustomField>
    <fullName>ALK_Update_Status_Mobile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Status Mobile</label>
    <type>Checkbox</type>
</CustomField>