force-app/main/default/objects/ServiceAppointment/fields/ALK_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>ALK_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Orden de Trabajo</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Citas de servicios (Orden de Trabajo)</relationshipLabel>
    <relationshipName>Citas_de_servicios_1</relationshipName>
    <type>Lookup</type>
</CustomField>