force-app/main/default/objects/ServiceAppointment/fields/ALK_Work_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>ALK_Work_Order_Number__c</fullName>
    <formula>ALK_Work_Order__r.WorkOrderNumber</formula>
    <label>Número de la Orden de Trabajo</label>
    <type>Text</type>
</CustomField>