force-app/main/default/objects/ServiceAppointment/fields/ALK_Work_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>ALK_Work_Type_Name__c</fullName>
    <formula>WorkType.Name</formula>
    <label>Nombre del Tipo de Trabajo</label>
    <type>Text</type>
</CustomField>