force-app/main/default/objects/ServiceAppointment/recordTypes/ALK_Citas_Servicio.recordType-meta.xml
<RecordType>
    <fullName>ALK_Citas_Servicio</fullName>
    <active>true</active>
    <label>Cita de Servicio</label>
</RecordType>