force-app/main/default/objects/ServiceAppointment/validationRules/ALK_Block_Reprogramado_Manual.validationRule-meta.xml
<ValidationRule>
    <fullName>ALK_Block_Reprogramado_Manual</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
NOT (ISCHANGED(ALK_Delete_Entity_Subscription__c)), 
NOT (ISCHANGED(ALK_Process_Notification__c)),

OR(
AND(ISCHANGED (Status), 
ISPICKVAL(Status,&quot;Reprogramada&quot;),
ISPICKVAL(ALK_Work_Order__r.Status, &quot;Incompleta&quot;)
)
)
)</errorConditionFormula>
    <errorMessage>El usuario no puede cambiar el Estado a Reprogramada.</errorMessage>
</ValidationRule>