force-app/main/default/objects/ServiceAppointment/validationRules/ALK_Motivo_Incompletud.validationRule-meta.xml
<ValidationRule>
    <fullName>ALK_Motivo_Incompletud</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status,&apos;Incompleto&apos;),OR(ISPICKVAL(ALK_Motivo_Incompletud__c, &apos;&apos;),AND(ISPICKVAL(ALK_Motivo_Incompletud__c, &apos;Otros&apos;),ISNULL(ALK_Motivo_Incompletud_otros__c)))
)</errorConditionFormula>
    <errorMessage>Please fill in the field Motivo de incompletud/Motivo de incompletud (otros</errorMessage>
</ValidationRule>