force-app/main/default/objects/ServiceAppointment/validationRules/ALK_Motivo_Retraso.validationRule-meta.xml
<ValidationRule>
    <fullName>ALK_Motivo_Retraso</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status,&apos;Retrasada&apos;), OR(ISNULL(ALK_Motivo_Retraso__c), ISBLANK(ALK_Motivo_Retraso__c)))</errorConditionFormula>
    <errorMessage>Please fill in the field Motivo de retraso (otros)</errorMessage>
</ValidationRule>