force-app/main/default/objects/ServiceAppointment/listViews/All_ServiceAppointments.listView-meta.xml
<ListView>
    <fullName>All_ServiceAppointments</fullName>
    <columns>Name</columns>
    <columns>Status</columns>
    <columns>ArrivalWindowStartTime</columns>
    <columns>ArrivalWindowEndTime</columns>
    <columns>RecordType</columns>
    <columns>CreatedDate</columns>
    <columns>LastModifiedDate</columns>
    <columns>ALK_Notificaction_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas las citas de servicios</label>
</ListView>